# Rapot

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  DEPLOYMENT_GUIDE.md  Dockerfile  LICENSE  RAPOT_DASHBOARD_MASTER_PROMPT.md  RAPOT_IMPLEMENTATION_PLAN.md  README.md  ai_analyst.py  ai_evaluation.py  ai_schema.py  async_data_loader.py  async_scanner.py  backtesting_system.py  batch_data_loader.py  bist_service.py  command_handler.py  config.py  dashboard.py  data_loader.py  database.py  db_session.py  docker-compose.yml  ecosystem.config.js  health_api.py  http_client.py  isyatirim_ssl.py  logger.py  main.py  market_scanner.py  memory_profiler.py  migrate_db.py  models.py  news_manager.py  ops_repository.py  package-lock.json  (+27 more)
.github/: dependabot.yml
api/: auth.py  calendar_service.py  main.py  realtime.py
data/: bist_symbols.json
docs/: ALGOTRADING_SPOT_BACKLOG.md  ARCHITECTURE_IMPROVEMENT_BACKLOG.md  ARCHITECTURE_REFACTOR_BACKLOG.md  ARCHITECTURE_REFACTOR_SPRINT_PLAN.md  BACKEND_RELIABILITY_BACKLOG.md  Codex.md  DB_MIGRATION_POLICY.md  PACKAGING_REFACTOR_MAP.md  RAPOT_CODEX_DIRECTIVE.md  WRAPPER_DEPRECATION_SCHEDULE.md
frontend/: README.md  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.typecheck.json
middleware/: .env.example  README.md
scripts/: DEPLOY.md  backfill_signal_details.py  backfill_special_tags.py  deploy.ps1  evaluate_ai_analyses.py  generate_openapi_snapshot.py
tests/: conftest.py  test_ai_analyst.py  test_ai_evaluation.py  test_ai_schema.py  test_api_ai_analysis_response.py  test_api_contract_smoke.py  (+22 more)
(+226 files in other folders)
